# ocaml_game_of_life

./: .gitignore  Makefile  README.md  dune  dune-project  engine.ml  engine.mli  life.ml  life.mli  life.opam  main.ml  world.ml  world.mli
